CustomUI should work just like standardUI now (ungrouped and localok) - fixes for APK install on some non-stock ROMs - improved behavior of screen on/off and lock screen for CustomUI